@@ -27,13 +27,6 @@ Why:
  These fields have been superseded by either other fields with better names
  or values in other fields.
 
-What: -u, --udeb (dpkg-scanpackages option)
-Status: deprecated
-When: 1.16.x
-Warning: program
-Why:
- This option has been superseded by -tudeb.
-
 What: --print-installation-architecture (dpkg option)
 Status: obsolete
 When: 1.15.x
@@ -124,3 +117,10 @@ Why:
  PGP is not part of Debian and GnuPG has been the standard tool for digital
  signatures for several years already. Supporting only GnuPG enables us to
  rely on some of its features.
+
+What: -u, --udeb (dpkg-scanpackages option)
+Status: deprecated
+When: 1.16.4
+Warning: program
+Why:
+ This option has been superseded by -tudeb.
