@@ -2,6 +2,7 @@
 .\"
 .\" Copyright © 1996 Michael Shields <shields@crosslink.net>
 .\" Copyright © 2006 Frank Lichtenheld <djpig@debian.org>
+.\" Copyright © 2007 Guillem Jover <guillem@debian.org>
 .\" Copyright © 2009 Raphaël Hertzog <hertzog@debian.org>
 .\" 
 .\" This is free software; you can redistribute it and/or modify
@@ -17,7 +18,7 @@
 .\" You should have received a copy of the GNU General Public License
 .\" along with this program.  If not, see <http://www.gnu.org/licenses/>.
 .
-.TH dpkg\-scanpackages 1 "2011-08-14" "Debian Project" "dpkg utilities"
+.TH dpkg\-scanpackages 1 "2012-05-07" "Debian Project" "dpkg utilities"
 .SH NAME
 dpkg\-scanpackages \- create Packages index files
 .
@@ -77,9 +78,6 @@ differ in architecture only the first one found is used.
 .TP
 .BR \-t ", " \-\-type " \fItype\fP"
 Scan for *.\fItype\fP packages, instead of *.deb.
-.TP
-.BR \-u ", " \-\-udeb
-\fBObsolete\fP alias for \fB\-tudeb\fP.
 .TP
 .BR \-e ", " \-\-extra\-override " \fIfile\fP"
 Scan \fIfile\fP to find supplementary overrides (the file can be
