@@ -19,6 +19,7 @@ dpkg (1.16.4) UNRELEASED; urgency=low
     Requested by Thorsten Glaser <tg@mirbsd.de>.
   * Remove deprecated support for PGP style signing command interface from
     dpkg-buildpackage.
+  * Remove obsolete --udeb dpkg-scanpackages option.
 
   [ Updated man page translations ]
   * German (Helge Kreutzmann).
